// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeterministicArchivist get gets multiple boundwitness 1`] = `
[
  {
    "_signatures": [
      "325501822063bf69e34f6a64f96ef1e55e8eed5060c0dc300271be82b4df024163b2b294018c5d06df160b20394f460b955c77d8a5147ec7f1bafa79b4798662",
    ],
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "_signatures": [
      "1810b9f9c6623adf38d0093ea6f3c2125570ed1ee757dbe9e9221b4ffb3920ec0b11175fdffc7e0bfee5d844f9e43c7e261d2bfcd1b273b46caa5cb23a4c798d",
    ],
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "1c9033e467d6877e2c84a70b29212a585bd6fd448bccfcc12adf0505c18984f6",
    ],
    "payload_schemas": [
      "network.xyo.test",
    ],
    "previous_hashes": [
      "58c138dd2aab7bd78bd2c3d80bebf900d3f99f506e201f1f0ace1d473fc45d76",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "_signatures": [
      "29a8dfe2cf7675e8c371763d6d8c7d9b0990145191967c6e399fff7854cd22390d6a8a7f4ae7628ac62deea6c34af33c37623950b1aba6ae4b8c88683d615c20",
    ],
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
    ],
    "payload_schemas": [
      "network.xyo.debug",
      "network.xyo.test",
    ],
    "previous_hashes": [
      "c5e4a2513ea22a7ccfa359207b4d83af68688dca8c9a3f5d39106ba6e599b481",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist get gets multiple payloads 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
  {
    "nonce": 2,
    "schema": "network.xyo.test",
  },
  {
    "nonce": 3,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist get gets single boundwitness 1`] = `
[
  {
    "_signatures": [
      "325501822063bf69e34f6a64f96ef1e55e8eed5060c0dc300271be82b4df024163b2b294018c5d06df160b20394f460b955c77d8a5147ec7f1bafa79b4798662",
    ],
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist get gets single payload 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist insert inserts multiple payloads 1`] = `
[
  {
    "_signatures": [
      "7a91a914b66a78391a69eb211c57097de9bfc1dd0c9c2d80d6f54b131b872973611f84c9f369d6e6f290e13e1eb261a20b895e22216fd719244df32a80643353",
      "895a38c46575b89279d6445916dc70eac421126322cb46e82c55e62c60c0265b3af9a1818725d4dcb743c80b72b0c351326fce66521db57e2c6ad1db02d5637c",
    ],
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
      "babe1d55e51844ea1cdc6b4dcbb649bb08e3cc3c",
    ],
    "payload_hashes": [
      "f3b73fb620a239b3c900d0a44ef0bf2bb6a8418054edab5cef41a849042f5795",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      "f3b73fb620a239b3c900d0a44ef0bf2bb6a8418054edab5cef41a849042f5795",
      "7b888e7b0ee8bf2413498e7169321fa9e975eaffbb1b2e65a97f439ad7318244",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789002,
  },
  {
    "_signatures": [
      "ed8e4f25fe06f04e6fe18c7a5d1a7573ae292a992e0418962bfe933b6c80fdbe15c046cfeffb91e418cbb01e189805f07d4fc8b3090bb4096c9943195b7d6e57",
    ],
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
    ],
    "payload_hashes": [
      "d0796172dfb3f66f62e69b1120ef10c6e767e8b260272da5802865e7add48bcf",
      "4e2d335e7f54334b10e30706546f820a750974381586ec9aa2eca6f916249b25",
      "e307ab9ba8ea876135ae22ff47114513cf7fefe024dab21d89d8584378df6b11",
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
      "network.xyo.query.archivist.insert",
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.test",
    ],
    "previous_hashes": [
      "7b888e7b0ee8bf2413498e7169321fa9e975eaffbb1b2e65a97f439ad7318244",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789002,
  },
]
`;

exports[`DeterministicArchivist insert inserts single payload 1`] = `
[
  {
    "_signatures": [
      "ace9c243e6e206a1e2f73598606d3c9342ffd94db87e5cfce857379836e8d5a67018286c97e74f0557ec16c551d3a54da6640254aed90aa7e94e41aceae82c0e",
      "e4aa358e52fb6a166810d1f60d523617a434f38488e5f696c8d6bb5388c01ce7578f5efe74eb60168b3de4bd3cd2ee002daed1f0c4355ccad710c777895e313b",
    ],
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
      "babe1d55e51844ea1cdc6b4dcbb649bb08e3cc3c",
    ],
    "payload_hashes": [
      "0b625a70ca20763ed5f1557358be488ede245cc90724a09b6aead493da0220a7",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      "0b625a70ca20763ed5f1557358be488ede245cc90724a09b6aead493da0220a7",
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "_signatures": [
      "2d357722f9e0f03e932c7c940cc38c57b78c207ac8634fe1dd643c3e9bc346255e5dbb5ad66e2538d529305d20b92febcbb44a443033c5c91926c95bdda7bae4",
    ],
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
    ],
    "payload_hashes": [
      "860b201b9d8891de3917ca7bfc5a4ec8898f6ff36b3ded59c9b279be38a45f78",
      "81b707afc5742a5501a4fac4ad56132928ce711de36de7aeda936e08066cfcad",
      "58c138dd2aab7bd78bd2c3d80bebf900d3f99f506e201f1f0ace1d473fc45d76",
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
      "network.xyo.query.archivist.insert",
      "network.xyo.boundwitness",
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;
